[package]
name = "embedded-nano-mesh-linux-examples"
version = "2.1.0"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight mesh communication protocol for linux"
readme = "README.md"
repository = "https://github.com/boshtannik/embedded-nano-mesh-linux-example"
keywords = ["serial", "mesh", "protocol", "network", "embedded"]
categories = ["embedded", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-nano-mesh = "2.1.0"
embedded-nano-mesh-linux-io = "0.1.0"
